# algorithms

./: 1.txt  CMakeLists.txt  algorithms.h  bst.cpp  bst.h  function.cpp  function.h  headers.h  list.cpp  list.h  main.cpp  main.h
tests/: CMakeLists.txt  main.cpp  text.txt  tst_tests1.h
